--- a/index.html
+++ b/index.html
@@ -1,9 +1,141 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>Lillian's Top 5 Prehistoric Reptiles and Facts About Them</title>
    </head>
    <body>
-      <p>Hello Push</p>
+      <header>
+      <h1>Lillian's Top 5 Prehistoric Reptiles and Facts About Them</h1>
+      <h2>A Bit About Lillian</h2>
+      <p>Lillian is 5 years old and has a passion for dinosaurs and other Prehistoric reptiles. She also loves spiders and many types of insects. She has a passion for learning. When she doesn't have her nose in a book she loves spending time with her little brother. Now Lillian would like to share some facts about her favorite dinsoaurs and Prehistoric reptiles! </p>
       <!-- Write your HTML in this file! -->
+      <nav>
+         <ul>
+          <li>
+               <a href="#Ankylo">Ankylosaurus</a>
+            </li>
+            <li>
+               <a href="#Pachy">Pachycephalosaurus</a>
+            </li>
+            <li>
+               <a href="#Para">Parasaurolophus</a>
+            </li>
+            <li>
+               <a href="#Dactyl">Pterodactyl</a>
+            </li>
+            <li>
+               <a href="#Anodon">Pteranodon</a>
+            </li>
+         </ul>
+      </nav>
+      </header>
+      <main>
+         <section>
+            <article>
+            <a name="Ankylo"></a>
+            <h2>Ankylosaurus (ang-kuh-low-saw-ruhs)</h2>
+            <audio controls>
+               <source src="audio/Ankylosaurus.m4a" type="audio/mp4" />
+               <source src="audio/Ankylosaurus.m4a" type="audio/ogg" />
+               <p>Your user agent does not support the HTML5 Audio element.</p>
+             </audio>
+            <h3>Diet: Herbivore eating mostly leaves and fruits</h3>
+            <p>Ankylosaurus had strong armor on its back to protect it from harm. Its tail was its secret weapon and was made of strong boney plates that hit as hard as a bowling ball. Ankylosaurus also walked on four legs eating low lying vegetation
+            </p>
+            <figure>
+               <img src="Images/Ankylosaurus.jpg" alt="Ankylosaurus. Free-use image from Pixabay user mdherren">
+                  <figcaption>
+                     "Ankylosaurus! Courtesy of pixabay user 
+                     <a href="https://pixabay.com/users/mdherren-5832917/">mdherren</a>"
+                  </figcaption>
+            </figure>
+         </article>
+         <article>
+            <a name="Pachy"></a>
+            <h2>Pachycephalosaurus (pa-chee-seh-fuh-luh-saw-ruhz)</h2>
+            <audio controls>
+               <source src="audio/Pachycephalasaurus.m4a" type="audio/mp4" />
+               <source src="audio/Pachycephalasaurus.m4a" type="audio/ogg" />
+               <p>Your user agent does not support the HTML5 Audio element.</p>
+             </audio>
+            <h3>Diet: Herbivore eating mostly leaves and fruits</h3>
+            <p>Pachycephalosaurus is the king of headbutting! Its head has a strong boney dome as hard as a bowling ball, similar to Ankylosaurus's tail. This dinosaur walked on two legs and had small arms. Pachycephalosaurus lived in a herd with others of the same species.
+            </p>
+            <figure>
+               <img src="Images/pachy.jpg" 
+               width="600"
+               height="500"
+               alt="Pachycephalosaurus. Free-use from goodfreephotos.com">
+                  <figcaption>
+                     "Pachycephalosaurus! Courtesy of
+                     <a href="https://www.goodfreephotos.com/">goodfreephotos.com</a>"
+                  </figcaption>
+            </figure>
+         </article>
+         <article>
+            <a name="Para"></a>
+            <h2>Parasaurolophus (peh-ruh-saw-raa-luh-fuhs)</h2>
+            <audio controls>
+               <source src="audio/Parasaurolophus.m4a" type="audio/mp4" />
+               <source src="audio/Parasaurolophus.m4a" type="audio/ogg" />
+               <p>Your user agent does not support the HTML5 Audio element.</p>
+             </audio>
+            <h3>Diet: Herbivore eating mostly leaves and fruits</h3>
+            <p>Parasaurolophus was known as the cow of the cretaceous period. This dinosaur had a distinct boney head crest that it used to make sounds. They lived in large herds with other Parasaurolophus. They walked on four legs but could stand on two legs to reach high vegetation.
+            </p>
+            <figure>
+               <img src="Images/parasaurolophus.jpg"
+               width="600"
+               height="500" 
+               alt="Parasaurolophus. Free-use from sciencekids.co.nz">
+                  <figcaption>
+                     "Parasaurolophus! Courtesy of  
+                     <a href="https://www.sciencekids.co.nz/">sciencekids.co.nz</a>"
+                  </figcaption>
+            </figure>
+         </article>
+         <article>
+            <a name="Dactyl"></a>
+            <h2>Pterodactyl (teh-ruh-dak-tl)</h2>
+            <audio controls>
+               <source src="audio/Pterodactyl.m4a" type="audio/mp4" />
+               <source src="audio/Pterodactyl.m4a" type="audio/ogg" />
+               <p>Your user agent does not support the HTML5 Audio element.</p>
+             </audio>
+            <h3>Diet: Carnivore eating meats such as fish and eggs</h3>
+            <p>Pterodactyl had large wings to help them soar through the air to look for food. They often lived near the sea to give them access to fish to eat. Their long beak helped them catch prey more easily. Contrary to popular belief, Pterodactyls were not dinosaurs, and are just labeled as flying reptiles.
+            </p>
+            <figure>
+               <img src="Images/Pterodactyl.jpg" alt="Pterodactyl. Free-use image from Pixabay user DariuszSankowski">
+                  <figcaption>
+                     "Pterodactyl! Courtesy of pixabay user 
+                     <a href="https://pixabay.com/users/dariuszsankowski-1441456/">DariuszSankowski</a>"
+                  </figcaption>
+            </figure>
+         </article>
+         <article>
+            <a name="Anodon"></a>
+            <h2>Pteranodon (tuh-ra-nuh-daan)</h2>
+            <audio controls>
+               <source src="audio/Pteranodon.m4a" type="audio/mp4" />
+               <source src="audio/Pteranodon.m4a" type="audio/ogg" /> 
+               <p>Your user agent does not support the HTML5 Audio element.</p>
+             </audio>
+            <h3>Diet: Carnivore eating meats such as fish and eggs</h3>
+            <p>Pteranodon was another flying reptile with strong wings to help it find food. Just like Pterodactyls, they were not actually dinosaurs even though most people think they are. They also lived near the sea close to their food source. Pteranodons were one of the largest of all the pterosaurs.
+            </p>
+            <figure>
+               <img src="Images/Pteranodon.jpg" alt="Pteranodon. Free-use image from Wikipedia user Dinoguy2">
+                  <figcaption>
+                     "Pteranodon! Courtesy of Wikipedia user 
+                     <a href="https://en.wikipedia.org/wiki/User:Dinoguy2">Dinoguy2</a>"
+                  </figcaption>
+            </figure>
+            </article>
+         </section>
+      </main>
+      <footer>
+         <p>&copy; 2021 Cole Epperson</p>
+      </footer>
    </body>
 </html>
