--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <a name="Ankylo"></a>
             <h2 id="DinoName">Ankylosaurus (ang-kuh-low-saw-ruhs)</h2>
             <audio controls>
-               <source src="audio/Ankylosaurus.m4a" type="audio/mp4" />
-               <source src="audio/Ankylosaurus.m4a" type="audio/ogg" />
+               <source src="https://github.com/CAEpperson/caepperson.github.io/blob/main/Audio/Ankylosaurus.m4a" type="audio/mp4" />
+               <source src="https://github.com/CAEpperson/caepperson.github.io/blob/main/Audio/Ankylosaurus.m4a" type="audio/ogg" />
                <p>Your user agent does not support the HTML5 Audio element.</p>
              </audio>
             <h3>Diet: Herbivore eating mostly leaves and fruits</h3>
